Fix issue with no-padding gutter shifting to end of row

--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -66,6 +66,8 @@
 	}
 
 	.no-gutter {
+		@include fill-parent();
+		@include row(table);
 
 		.alcatraz-col-1 {
 			@include span-columns( 1 of 12 );
